Api calling using HttpRequest and other similar classes done and project working perfect